--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
         </h1>
           </div>
           <p class="recontainer"> ―――――――――――――――――――― <br> 	&#8226; Web Developer ✿ <br> • Junior UI Designer ✿</p>
-          <img src="rb3.png" class="image">
+          <img src="assets/rd copy.png "image">
 </body>
 </html>
